<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back1"
        android:padding="16dp">


        <TextView
            android:id="@+id/pName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rvProductImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.292"
            tools:text="product_name" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:text="@string/discount"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/Rs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discount"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:text="@string/rating"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rs"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:text="@string/stock"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:text="@string/brand"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stock"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvProductImage"
            tools:layout_editor_absoluteY="256dp"
            tools:text="description" />

        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="28dp"
            android:elevation="16dp"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:text="discount" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="28dp"
            android:elevation="16dp"
            android:textAlignment="center"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiscount"
            tools:text="price" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="20dp"
            android:elevation="16dp"
            android:textAlignment="center"

            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:text="rating" />

        <TextView
            android:id="@+id/tvStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="12dp"
            android:elevation="16dp"
            android:textAlignment="center"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRating"
            tools:text="stock" />

        <TextView
            android:id="@+id/tvBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="20dp"
            android:elevation="16dp"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStock"
            tools:text="brand" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="16dp"
            android:textAlignment="center"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBrand"
            tools:text="category" />

        <ImageView
            android:id="@+id/arrowLeft"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="116dp"
            android:src="@drawable/left_arrow_svgrepo_com"
            app:layout_constraintEnd_toStartOf="@+id/rvProductImage"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrowRight"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="116dp"
            android:src="@drawable/right_arrow_svgrepo_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"

            app:layout_constraintStart_toEndOf="@+id/rvProductImage"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductImage"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:elevation="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>